some performence fixes