@@ -46,27 +46,27 @@ public class TaskManagerTest {
     @Test
     void deleteTaskInTheDBTest() {
         taskManager1.add("Buy milk");
-        taskManager1.delete(user.getId(), 1);
+        taskManager1.delete(user.id(), 1);
         List<Task> tasks = taskManager1.getAllTask();
-        Assertions.assertTrue(fakeTask.findTasksByUserId(user.getId()).isEmpty());
+        Assertions.assertTrue(fakeTask.findTasksByUserId(user.id()).isEmpty());
         Assertions.assertTrue(tasks.isEmpty());
     }
     @Test
     void deleteTaskInTheDBTest2() {
         taskManager1.add("Buy milk");
         taskManager1.add("Buy water");
-        taskManager1.delete(user.getId(), 1);
+        taskManager1.delete(user.id(), 1);
         List<Task> tasks = taskManager1.getAllTask();
         Assertions.assertEquals(1, fakeTask.findTasksByUserId(1).size());
         Assertions.assertEquals("Buy water",tasks.getFirst().getDescription());
-        Assertions.assertEquals(2, tasks.get(0).getTaskID());
+        Assertions.assertEquals(2, tasks.getFirst().getTaskID());
     }
     @Test
     void deleteTaskInTheDBTest3() {
         taskManager1.add("Buy milk");
 
         Assertions.assertThrows(IllegalArgumentException.class,()-> {
-            taskManager1.delete(user.getId(), 99999);
+            taskManager1.delete(user.id(), 99999);
         });
     }
 
@@ -83,7 +83,7 @@ public class TaskManagerTest {
     @Test
     void changeTaskTest() {
         taskManager1.add("Cook Water");
-        taskManager1.changeTask(user.getId(), 1, "Cook milk");
+        taskManager1.changeTask(user.id(), 1, "Cook milk");
         List<Task> allTask = taskManager1.getAllTask();
         Assertions.assertFalse(allTask.isEmpty());
         Assertions.assertEquals("Cook milk", fakeTask.findTasksByUserId(1).getFirst().getDescription());
@@ -93,7 +93,7 @@ public class TaskManagerTest {
     void changeStatusTest() {
         taskManager1.add("Cook Water");
         Enum.Status done = Enum.Status.DONE;
-        taskManager1.changeStatus(user.getId(), 1, done);
+        taskManager1.changeStatus(user.id(), 1, done);
         List<Task> allTask = taskManager1.getAllTask();
         Assertions.assertFalse(allTask.isEmpty());
         Assertions.assertEquals(done, fakeTask.findTasksByUserId(1).getFirst().getStatus());
